.kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sispews-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: sispews.policiacivil.go.gov.br
spec:
  tls:
    - hosts:
        - sispews-homo.policiacivil.go.gov.br
        - sispews.policiacivil.go.gov.br
      secretName: certificado-pc
  rules:
    - host: sispews-homo.policiacivil.go.gov.br
      http:
        paths:
          - path: /
            backend:
              serviceName: sispews-service
              servicePort: http
